updated carbon - fixed broken image links, added padding to table headers to emphasize titles as being separate from data, removed force center to every table instead apply center based on if grade is present, added issues & annuals table as css elements for consistent styling, fixed row colors (weeklypull, manage, comicdetails), increased title space on series detail page, ensure images on same line are vertically-aligned properly, updated storyarc main page to use proper row grading. updated index/home page - adjusted publisher column so it doesn't over-run into 2 lines, centered data in columns

--- a/data/interfaces/carbon/css/data_table.css
+++ b/data/interfaces/carbon/css/data_table.css
@@ -63,19 +63,19 @@
 }
 
 .paginate_disabled_previous {
-	background-image: url('../../default/images/back_disabled.jpg');
+	background-image: url('../images/back_disabled.jpg');
 }
 
 .paginate_enabled_previous {
-	background-image: url('../../default/images/back_enabled.jpg');
+	background-image: url('../images/back_enabled.jpg');
 }
 
 .paginate_disabled_next {
-	background-image: url('../../default/images/forward_disabled.jpg');
+	background-image: url('../images/forward_disabled.jpg');
 }
 
 .paginate_enabled_next {
-	background-image: url('../../default/images/forward_enabled.jpg');
+	background-image: url('../images/forward_enabled.jpg');
 }
 
 
@@ -104,12 +104,12 @@ table.display {
 }
 
 table.display thead th {
-	padding: 3px 16px 8px 15px;
+	padding: 3px 5px 3px 5px;
 	background-color: white;
-	-font-weight: bold;
-	font-size: 13px;
+	font-weight: bold;
+	font-size: 16px;
 	border-bottom: 1px solid #1c1e22;
-	boroder-bottom-width: 3px;
+	border-bottom-width: 3px;
 	text-align: center;
 }
 
@@ -120,18 +120,17 @@ table.display tfoot th {
 }
 
 table.display tr.heading2 td {
-	border-bottom: 1px solid #aaa;
+       border-bottom: 1px solid #aaa;
+       text-align: center;
+       vertical-align: middle;
 }
-
 table.display td {
-	padding: 8px 10px;
-	font-size: 12px;
-	border-bottom: 1px solid #1c1e22;
- 	border-right: 1px solid #1c1e22;
-	text-align: center;
-	vertical-align: middle;
+       border-bottom: 1px solid #1c1e22;
+       border-right: 1px solid #1c1e22;
+       vertical-align: middle;
+       padding: 4px 5px;
+       font-size: 12px;
 }
-table
 table.display td.center {
 	text-align: center;
 }
@@ -180,7 +179,6 @@ table.display_no_select td {
 	padding: 8px 10px;
 	font-size: 14px;
 }
-table
 table.display_no_select td.center {
 	text-align: center;
 }
@@ -232,7 +230,6 @@ table.display_log td {
 	border-left: 1px solid #1c1e22;
 	border-bottom: 1px solid #1c1e22;
 }
-table
 table.display_log td.center {
         text-align: center;
 }
@@ -242,29 +239,29 @@ table.display_log td.center {
  */
 
 .sorting_asc {
-	background: url('../../default/images/sort_asc.png') no-repeat center right;
+	background: url('../images/sort_asc.png') no-repeat center right;
 	cursor: pointer;
 	* cursor: hand;
 }
 
 .sorting_desc {
-	background: url('../../default/images/sort_desc.png') no-repeat center right;
+	background: url('../images/sort_desc.png') no-repeat center right;
 	cursor: pointer;
 	* cursor: hand;
 }
 
 .sorting {
-	background: url('../../default/images/sort_both.png') no-repeat center right;
+	background: url('../images/sort_both.png') no-repeat center right;
 	cursor: pointer;
 	* cursor: hand;
 }
 
 .sorting_asc_disabled {
-	background: url('../../default/images/sort_asc_disabled.png') no-repeat center right;
+	background: url('../images/sort_asc_disabled.png') no-repeat center right;
 }
 
 .sorting_desc_disabled {
-	background: url('../../default/images/sort_desc_disabled.png') no-repeat center right;
+	background: url('../images/sort_desc_disabled.png') no-repeat center right;
 }
 
 
@@ -275,11 +272,11 @@ table.display_log td.center {
  * DataTables row classes
  */
 table.display tr.odd.gradeA {
-	background-color: #353a41;
+	background-color: #0d4a0b;
 }
 
 table.display tr.even.gradeA {
-	background-color: #2e3338;
+	background-color: #0d4a0b;
 }
 
 table.display tr.odd.gradeC {
@@ -314,11 +311,11 @@ table.display tr.odd.gradeL {
 }
 
 table.display tr.odd.gradeX {
-	background-color: #ae3431;
+	background-color: #641716;
 }
 
 table.display tr.even.gradeX {
-	background-color: #ae3431;
+	background-color: #641716;
 }
 
 table.display tr.odd.gradeU {
@@ -398,7 +395,7 @@ table.display tr.gradeT td,
 table.display tr.gradeF td,
 table.display tr.gradeT1 td,
 table.display tr.gradeT2 td,
-table.display tr.gradeZ td {border-bottom: 1px solid #1c1e22;border-right: 1px solid #1c1e22;text-align:center;-padding:3px 16px 8px 15px;}
+table.display tr.gradeZ td {border-bottom: 1px solid #1c1e22;border-right: 1px solid #1c1e22; }
 table.display tr:last-child td {
 	-border-bottom: 1px solid #eee;
 }
@@ -540,7 +537,7 @@ table.display_no_select tr.gradeT1 td,
 table.display_no_select tr.gradeT2 td,
 table.display_no_select tr.gradeZ td {border-bottom: 1px solid #1c1e22; border-right: 1px solid #1c1e22;}
 table.display_no_select tr:last-child td {
-        border-bottom: 1px solid #1c1e22;
+        -border-bottom: 1px solid #1c1e22;
 }
 table.display_no_select tr td#add .ui-icon { display: inline-block; }
 
